Disable autocommit at the db connection level and activate the required datasource programatically